# takenote

./: Cargo.toml  README.md  takenote.sh
.github/: pull_request_template.md
docs/: config-specs.md  config.example.toml
examples/: .confreence.example.config.toml
src/: init.rs  lib.rs  main.rs  takenote.rs
src/cli/: parser.rs
src/init/: mod.rs
src/load/: config.rs  constants.rs  environment.rs  mod.rs
