[package]
name = "takenote"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.14"
assert_cmd = "2.0.4"
predicates = "2.1.1"
assert_fs = "1.0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
clap = { version = "3.1.12", features = ["cargo"] }

[dev-dependencies]
tempfile = "3.3.0"
